# anotaai-backend-test

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
api/: Cargo.toml  Dockerfile  docker-compose.yaml
api/src/: catalog.rs  category.rs  main.rs  product.rs
go_api/: catalog.go  category.go  docker-compose.yaml  go.mod  go.sum  main.go  product.go
publish_catalog/: Cargo.toml
publish_catalog/src/: main.rs
src/: catalog.rs  category.rs  error.rs  main.rs  product.rs
