[package]
name = "publish_catalog"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.12.0", default-features = false, features = [
  "sqs",
] }
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.12.0"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
dotenvy = "0.15.7"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
reqwest = "0.11.23"
openssl = { version = "0.10.35", features = ["vendored"] }
